--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -4,9 +4,9 @@
 name: ydyp
 
 on:
-  schedule:
+  #schedule:
     # 设置启动时间，为 UTC 时间, UTC23点 对应北京时间早7点
-    - cron : '00 22 * * *'
+    #- cron : '00 22 * * *'
   workflow_dispatch:
 
 permissions:
